# DeafEar

./: .gitignore  Dockerfile  character_dict.json  docker-compose.dev.yaml  main.py  pyproject.toml  stopwords-vi.txt  temp.json  test.py
deafear/images/: requirements.txt
deafear/src/models/components/: function.py  setting.py
deafear/src/models/model_utils/manipulate/: convert_to_numpy.py  convert_to_vd.py  landmarks_data2.npy  landmarks_data3.npy  landmarks_data4.npy  model.py  save2char_dict.ipynb  test_size.py
deafear/src/models/model_utils/manipulate/data_processed/: landmarks_W01666.npy  landmarks_W01668.npy  landmarks_W01669.npy  landmarks_W01670.npy  landmarks_W01671.npy  landmarks_W01676.npy  landmarks_W01678.npy  landmarks_W01679.npy  landmarks_W01681.npy  landmarks_W01682.npy  landmarks_W01684.npy  landmarks_W01686.npy  landmarks_W01693.npy  landmarks_W01696.npy  landmarks_W01698.npy  landmarks_W01700.npy  landmarks_W01701.npy  landmarks_W01702.npy  landmarks_W01703.npy  landmarks_W01704.npy  landmarks_W01706.npy  landmarks_W01708.npy  landmarks_W01709.npy  landmarks_W01710.npy  landmarks_W01711.npy  landmarks_W01712.npy  landmarks_W01714.npy  landmarks_W01715.npy  (+72 more)
deafear/src/models/model_utils/similar_sentence/: elastic_search.py  similarity_sentence.py
deafear/src/web/: app.py  tempCodeRunnerFile.py  test.py
deafear/src/web/static/: login_style.css  style.css  texttosign_script.js  texttosign_style.css
deafear/src/web/templates/: login.html  sign_to_text.html  text_to_sign.html
manipulate/: convert_to_vd.py  landmarks_data1.npy
(+9 files in other folders)
