[tool.poetry]
name = "deafear"
version = "0.1.0"
description = ""
authors = ["hoangtrungkien2109 <hoangtrungkien2109@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
loguru = "^0.7.2"
pydantic = "^2.9.2"
fastapi = "0.115.2"
numpy = "1.23.5"
dataclasses-json = "0.6.7"
greenlet = "3.0.3"
grpcio = "^1.67.1"
grpcio-tools = "1.64.1"
huggingface-hub = "0.23.4"
ollama = "0.3.3"
openpyxl = "3.1.5"
orjson = "3.10.5"
pillow = "10.4.0"
pipx = "1.7.1"
py-vncorenlp = "0.1.4"
pymongo = "3.11.0"
regex = "2024.5.15"
requests = "^2.32.3"
safetensors = "0.4.3"
sentence-transformers = "3.0.1"
sklearn-crfsuite = "0.5.0"
tokenizers = "0.20.1"
torch = "2.3.0"
torchvision = "0.18.0"
tqdm = "4.66.5"
transformers = "4.45.2"
typer = "0.12.5"
typing-inspect = "0.9.0"
uvicorn = "0.32.0"
pyvi = "^0.1.1"
pandas = "2.2.2"
elasticsearch = "8.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
